--- a/style.css
+++ b/style.css
@@ -817,8 +817,8 @@ section {
 }
 
 body.bg__dark section {
-  background: #0f0d0d;
-  color: #fefcff;
+  background:  #fefcff;
+  color: #0f0d0d;
 }
 
 body.bg__dark section .st__line {
