--- a/style.css
+++ b/style.css
@@ -816,10 +816,10 @@ section {
   color: #0f0d0d;
 }
 
-body.bg__dark section {
+/* body.bg__dark section {
   background:  #fefcff !important;
   color: #0f0d0d !important;
-}
+} */
 
 body.bg__dark section .st__line {
   background: #fefcff;
