--- a/style.css
+++ b/style.css
@@ -28232,7 +28232,7 @@ mix-blend-mode: normal !important;
     text-transform: initial;
     display: table;
     position: relative;
-    color: #817c7c;
+    color: #c6c2c2;
 }
 
 #identity .line__inner {
