--- a/style.css
+++ b/style.css
@@ -28244,7 +28244,7 @@ mix-blend-mode: normal !important;
 }
 
  @media screen and (min-width: 1920px) and (max-width: 1920px) {
-  .line__outer {
-  bottom: 250px
- }
+  #home-main-banner .line__outer {
+    bottom: 250px
+  }
  }
