video issue fix

--- a/style.css
+++ b/style.css
@@ -28285,3 +28285,18 @@ mix-blend-mode: normal !important;
  #contact-form h1.headline__load.lg {
   line-height: 1!important;
  }
+
+ .video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* for 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-wrapper video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
